<resources>
    <string name="app_name">TermScheduler</string>
    <string name="termsButton">Go To Terms</string>
    <string name="dropped">Dropped:</string>
    <string name="completed">Completed:</string>
    <string name="courses">Courses</string>
    <string name="in_progress">In Progress:</string>
    <string name="passed">Passed:</string>
    <string name="failed">Failed</string>
    <string name="assessments">Assessments</string>
    <string name="create_sample_data">Create Sample Data</string>
    <string name="clear_data_base">Clear Database</string>
    <string name="dummyNumber">10</string>
    <string name="planned">Planned:</string>
    <string name="start_date">Start Date:</string>
    <string name="dummy_start_date">1/1/2020</string>
    <string name="end_date">End Date:</string>
    <string name="dummy_end_date_value">6/18/2020</string>
    <string name="enter_term_name">Enter Term Name</string>
    <string name="save">Save</string>
    <string name="plan_to_take">Plan To Take:</string>
    <string name="courses_included">Courses In This Term</string>
    <string name="set_end">Set End</string>
    <string name="set_start">Set Start</string>
    <string name="delete">Delete</string>
    <string name="assessments_included">Assessments In This Course</string>
    <string name="course_status">Course Status:</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="notes_for_course">Notes For Course:</string>
    <string name="view_notes">View Notes</string>
    <string name="name">Name:</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="email">Email:</string>
    <string name="mentor_email_address">Mentor Email Address</string>
    <string name="phone">Phone:</string>
    <string name="enter_note_text_here">Enter note text here</string>
    <string name="note_for">Note For:</string>
    <string name="assessment_status">Assessment Status:</string>
    <string name="assessment_type">Assessment Type:</string>
    <string name="details_for_assessment">Details for Assessment</string>
    <string name="performance">Performance</string>
    <string name="enter_assessment_name">Enter Assessment Name</string>
    <string name="type">Type:</string>
    <string name="status">Status:</string>
    <string name="mentor">Mentor:</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="planned_date">Planned Date:</string>
    <string name="set_date">Set Date</string>

    <string-array name="assessment_statuses">
        <item>Planned</item>
        <item>Passed</item>
        <item>Failed</item>
    </string-array>

    <string-array name="course_statuses">
        <item>Plan to take</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Failed</item>
    </string-array>

    <string-array name="assessment_types">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WGU Scheduler</string>
    <string name="nav_header_subtitle">Navigation</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="terms">Terms</string>
    <string name="mentors">Mentors</string>
    <string name="tracker">Tracker</string>
    <string name="milestone_notifications_for">Milestone Notifications For</string>
    <string name="title">Title</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="milestone_title">Milestone Title</string>
    <string name="dummy_time">13:00</string>
    <string name="set">Set</string>
    <string name="milestones">Milestones</string>
    <string name="new_Alarm">New</string>

</resources>
